hydroflow_plus/src/snapshots/hydroflow_plus__persist_pullup__tests__persist_pullup_through_map.snap
---
source: hydroflow_plus/src/persist_pullup.rs
expression: built.ir()
---
[
    ForEach {
        f: { use crate :: __staged :: persist_pullup :: tests :: * ; | n | println ! ("{}" , n) },
        input: Unpersist(
            Map {
                f: { use crate :: __staged :: persist_pullup :: tests :: * ; | v | v + 1 },
                input: Persist(
                    Source {
                        source: Iter(
                            { use crate :: __staged :: persist_pullup :: tests :: * ; 0 .. 10 },
                        ),
                        location_kind: Process(
                            0,
                        ),
                    },
                ),
            },
        ),
    },
]
